Made skeleton of index.html sections, content of each section

--- a/index.html
+++ b/index.html
@@ -8,5 +8,16 @@
 </html>
 
 <body>
-
+    <div class="main-section 1">
+        <div class="content"></div>
+    </div>
+    <div class="main-section 2">
+        <div class="content"></div>
+    </div>
+    <div class="main-section 3">
+        <div class="content"></div>
+    </div>
+    <div class="main-section 4">
+        <div class="content"></div>
+    </div>
 </body>
