styles.css some basic definitions index.html changed '1' to 'one' etc

--- a/index.html
+++ b/index.html
@@ -8,16 +8,16 @@
 </html>
 
 <body>
-    <div class="main-section 1">
+    <div class="main-section one">
         <div class="content"></div>
     </div>
-    <div class="main-section 2">
+    <div class="main-section two">
         <div class="content"></div>
     </div>
-    <div class="main-section 3">
+    <div class="main-section three">
         <div class="content"></div>
     </div>
-    <div class="main-section 4">
+    <div class="main-section four">
         <div class="content"></div>
     </div>
 </body>
