index.html skeleton improved (almost) all text is present

--- a/index.html
+++ b/index.html
@@ -9,15 +9,43 @@
 
 <body>
     <div class="main-section one">
-        <div class="content"></div>
+        <div class="header">
+            <div class="logo"></div>
+            <ul class="menu">
+                <li><a href="#">header link one</a></li>
+                <li><a href="#">header link two</a></li>
+                <li><a href="#">header link three</a></li>
+            </ul>
+        </div>
+        <div class="content">
+            <div class="text">
+                <h1 class="title">This website is awesome</h1>
+                <p class="subtext">This website has some subtext that goes under the main
+                title. It's a smaller font and the color is lower contrast.</p>
+                <button class="sign-up">Sign up</button>
+            </div>
+            <img src="https://kids.kiddle.co/images/thumb/9/95/Juhan_Liiv.jpg/300px-Juhan_Liiv.jpg"
+                 alt="Juhan Liiv" class="image">
+        </div>
     </div>
     <div class="main-section two">
+        <h2 class="subtitle">Some random information.</h2>
         <div class="content"></div>
     </div>
     <div class="main-section three">
-        <div class="content"></div>
+        <p class="quote">This is an inspiring quote, or a testimonial from a customer. Maybe
+        it's just filling up space, or maybe people will actually read it. Who knows? All I
+        know is that it looks nice.</p>
+        <p class="author">-Thor, God of Thunder</p>
     </div>
     <div class="main-section four">
-        <div class="content"></div>
+        <div class="content">
+            <div class="text">
+                <h2 class="subtitle">Call to action! It's time!</h2>
+                <p class="paragraph">Sign up for our product by clicking that button right
+                over there!</p>
+            </div>
+            <button class="sign-up">Sign up</button>
+        </div>
     </div>
 </body>
