most of the css done

--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
 <body>
     <div class="main-section one">
         <div class="header">
-            <div class="logo"></div>
+            <h1 class="logo">Header Logo</h1>
             <ul class="menu">
-                <li><a href="#">header link one</a></li>
-                <li><a href="#">header link two</a></li>
-                <li><a href="#">header link three</a></li>
+                <li><a href="">header link one</a></li>
+                <li><a href="">header link two</a></li>
+                <li><a href="">header link three</a></li>
             </ul>
         </div>
         <div class="content">
