--- a/index.html
+++ b/index.html
@@ -30,7 +30,28 @@
     </div>
     <div class="main-section two">
         <h2 class="subtitle">Some random information.</h2>
-        <div class="content"></div>
+        <div class="content">
+            <div class="piltjatekst">
+                <img src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fimages.wallpapersden.com%2Fimage%2Fdownload%2Fhorse-stallion-grass_aWdtbJSZmpqtpaSklGhlZa1oZWU.jpg&f=1&nofb=1&ipt=352b6dbfdc004cdb528826992b8fa56c91998182eac5a960538bf31828d14191"
+                     alt="hobune">
+                <p class="text">this is some subtext under an illustration or image much text much mtejsdnasjdhasjdh</p>
+            </div>
+            <div class="piltjatekst">
+                <img src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fimages.wallpapersden.com%2Fimage%2Fdownload%2Fhorse-stallion-grass_aWdtbJSZmpqtpaSklGhlZa1oZWU.jpg&f=1&nofb=1&ipt=352b6dbfdc004cdb528826992b8fa56c91998182eac5a960538bf31828d14191"
+                     alt="hobune">
+                <p class="text">this is some subtext under an illustration or image</p>
+            </div>
+            <div class="piltjatekst">
+                <img src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fimages.wallpapersden.com%2Fimage%2Fdownload%2Fhorse-stallion-grass_aWdtbJSZmpqtpaSklGhlZa1oZWU.jpg&f=1&nofb=1&ipt=352b6dbfdc004cdb528826992b8fa56c91998182eac5a960538bf31828d14191"
+                     alt="hobune">
+                <p class="text">this is some subtext under an illustration or image</p>
+            </div>
+            <div class="piltjatekst">
+                <img src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fimages.wallpapersden.com%2Fimage%2Fdownload%2Fhorse-stallion-grass_aWdtbJSZmpqtpaSklGhlZa1oZWU.jpg&f=1&nofb=1&ipt=352b6dbfdc004cdb528826992b8fa56c91998182eac5a960538bf31828d14191"
+                alt="hobune">
+                <p class="text">this is some subtext under an illustration or image</p>
+            </div>
+        </div>
     </div>
     <div class="main-section three">
         <p class="quote">This is an inspiring quote, or a testimonial from a customer. Maybe
